# fastapi_translation_service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
google-translate-api/: Dockerfile
nodejs-google-translate-api/: index.js
src/: entrypoint.sh  ruff.toml  setup.cfg
src/app/: main.py
src/app/api/: deps.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: word.py
src/app/core/: config.py  middlewares.py
src/app/db/: client.py
src/app/exceptions/: __init__.py  api.py
src/app/models/: __init__.py  word.py
src/app/repository/: __init__.py  base.py  word.py
src/app/schemas/: __init__.py
src/app/schemas/api/: definition.py  translation.py  word.py
src/app/schemas/models/: definition.py  translation.py  word.py
src/app/tests/: conftest.py
src/app/tests/functional/: fixtures.py  test_word_details.py  test_word_remove.py  test_words.py
src/app/tests/unit/: fixtures.py
src/app/utils/: google_service.py  params.py
